@@ -1,6 +1,7 @@
 2.1.0-beta1 "Rusty Clutch"
 ==========================
 
+    ADDED: KMountMan::removable(), KMountMan::networkFilesystem()
     ADDED: file regex in quick search, thanks to GregC
     ADDED: lister: a fast text/hex viewer for Krusader
     ADDED: service menu, thanks to Tomasz Kalkosinski
